agregamdo algunas correciones al archivo webpack.config.js

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
     <head>
         
-    <link href="main.css" rel="stylesheet"></head>
+    <link href="bundle.css" rel="stylesheet"></head>
 
     <body>
         
